Fixed a z-index layer issue when using fullscreen notes.

--- a/app/src/Components/Body/Styles/Navigation/Navigation.module.css
+++ b/app/src/Components/Body/Styles/Navigation/Navigation.module.css
@@ -5,7 +5,6 @@
     width: 15%;
     height: 100%;
 
-    z-index: 2;
     position: absolute;
     top: 0;
     left: 0;
