--- a/app/src/Components/Header/Styles/Bookmarks.module.css
+++ b/app/src/Components/Header/Styles/Bookmarks.module.css
@@ -5,8 +5,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-
-    z-index: 10;
 }
 
 .Mobile {}
